[gd_scene load_steps=16 format=2]

[ext_resource path="res://Theme.tres" type="Theme" id=1]
[ext_resource path="res://Fonts/Terminus.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Sprites/Money.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Health.png" type="Texture" id=4]
[ext_resource path="res://Scripts/GameUI.gd" type="Script" id=5]
[ext_resource path="res://Scripts/Message.gd" type="Script" id=6]
[ext_resource path="res://Sprites/Blocks/Block1.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.498039, 0.498039, 0.498039, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.498039, 0.498039, 0.498039, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.498039, 0.498039, 0.498039, 1 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="DynamicFont" id=8]
size = 32
font_data = ExtResource( 2 )

[node name="UI" type="CanvasLayer"]
script = ExtResource( 5 )

[node name="Panel" type="Panel" parent="."]
margin_left = -400.0
margin_top = -300.0
margin_right = 400.0
margin_bottom = -240.0
theme = ExtResource( 1 )

[node name="HealthSprite" type="Sprite" parent="Panel"]
position = Vector2( 40, 30 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )

[node name="HealthLabel" type="Label" parent="Panel"]
margin_left = 70.0
margin_top = 10.0
margin_right = 120.0
margin_bottom = 50.0
text = "0"
align = 1
valign = 1

[node name="MoneySprite" type="Sprite" parent="Panel"]
position = Vector2( 150, 30 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )

[node name="MoneyLabel" type="Label" parent="Panel"]
margin_left = 170.0
margin_top = 10.0
margin_right = 250.0
margin_bottom = 50.0
text = "0"
align = 1
valign = 1

[node name="GunLabel" type="Label" parent="Panel"]
margin_left = 270.0
margin_top = 10.0
margin_right = 790.0
margin_bottom = 50.0
text = "Gun 0/0"
align = 1
valign = 1

[node name="PausePanel" type="Panel" parent="."]
visible = false
margin_left = -170.0
margin_top = -220.0
margin_right = 170.0
margin_bottom = 220.0
theme = ExtResource( 1 )

[node name="Label" type="Label" parent="PausePanel"]
margin_left = 30.0
margin_top = 30.0
margin_right = 170.0
margin_bottom = 70.0
rect_scale = Vector2( 2, 2 )
text = "Paused"
align = 1
valign = 1

[node name="ContinueButton" type="Button" parent="PausePanel"]
pause_mode = 2
margin_left = 30.0
margin_top = 130.0
margin_right = 310.0
margin_bottom = 210.0
text = "Continue"

[node name="RestartButton" type="Button" parent="PausePanel"]
pause_mode = 2
margin_left = 30.0
margin_top = 230.0
margin_right = 310.0
margin_bottom = 310.0
text = "Restart"

[node name="MenuButton" type="Button" parent="PausePanel"]
pause_mode = 2
margin_left = 30.0
margin_top = 330.0
margin_right = 310.0
margin_bottom = 410.0
text = "Menu"

[node name="GameOverPanel" type="Panel" parent="."]
visible = false
margin_left = -165.0
margin_top = -150.0
margin_right = 165.0
margin_bottom = 150.0
theme = ExtResource( 1 )

[node name="Label" type="Label" parent="GameOverPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -140.0
margin_top = -120.0
margin_right = 47.0
margin_bottom = -76.0
rect_scale = Vector2( 1.5, 1.5 )
custom_fonts/font = SubResource( 1 )
text = "Game Over"
align = 1
valign = 1

[node name="RestartButton" type="Button" parent="GameOverPanel"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -140.0
margin_top = -35.0
margin_right = 140.0
margin_bottom = 35.0
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
text = "Restart"

[node name="MenuButton" type="Button" parent="GameOverPanel"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -140.0
margin_top = 55.0
margin_right = 140.0
margin_bottom = 125.0
custom_fonts/font = SubResource( 8 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
text = "Menu"

[node name="MessageLabel" type="Label" parent="."]
margin_left = -380.0
margin_top = 200.0
margin_right = 380.0
margin_bottom = 250.0
theme = ExtResource( 1 )
align = 1
valign = 1
script = ExtResource( 6 )

[node name="Final" type="Node" parent="."]

[node name="Sprite" type="Sprite" parent="Final"]
visible = false
position = Vector2( 3.05176e-05, 7.62939e-06 )
scale = Vector2( 16, 12 )
texture = ExtResource( 7 )

[node name="Label" type="Label" parent="Final"]
visible = false
margin_left = -250.0
margin_top = -50.0
rect_scale = Vector2( 2, 2 )
theme = ExtResource( 1 )
text = "Game Complete"
align = 1
valign = 1

[connection signal="button_down" from="PausePanel/ContinueButton" to="." method="_on_ContinueButton_button_down"]
[connection signal="button_down" from="PausePanel/RestartButton" to="." method="_on_RestartButton_button_down"]
[connection signal="button_down" from="PausePanel/MenuButton" to="." method="_on_MenuButton_button_down"]
[connection signal="button_down" from="GameOverPanel/RestartButton" to="." method="_on_RestartButton_button_down"]
[connection signal="button_down" from="GameOverPanel/MenuButton" to="." method="_on_MenuButton_button_down"]
